--- a/Template/Home/about_us.html
+++ b/Template/Home/about_us.html
@@ -36,60 +36,7 @@
       </div>
     </section>
 
-
-{% comment %} <section class="journey-section">
-  <div class="journey-header">
-    <h2>Our Incredible Journey 🚀</h2>
-    <p>Experience the moments that have defined our success, shaped our culture, and revolutionized our industry.</p>
-  </div>
-
-  <div class="journey-mobiles">
-    <div class="journey-grid">
-      <div class="journey-item">
-        <i class="fa fa-calendar journey-icon"></i>
-        <span class="journey-date">2015</span>
-        <p class="journey-description">We've rented a small office in Gorai – Borivali to deliver data entry projects for EC Bank, MCGM – Estate Department, and Octroi</p>
-      </div>
-      <div class="journey-item">
-        <i class="fa fa-calendar journey-icon"></i>
-        <span class="journey-date">2017</span>
-        <p class="journey-description">We purchased our inaugural office in Malad - Orbit Industrial Estate, expanded to 100+ staff, and began providing hardware supply and maintenance.</p>
-      </div>
-      <div class="journey-item">
-        <i class="fa fa-calendar journey-icon"></i>
-        <span class="journey-date">2018</span>
-        <p class="journey-description">Expanding data entry projects to various Government Bodies, securing our first AMC contract with MCGM – Octroi. Our team grew to 400+.</p>
-      </div>
-      <div class="journey-item">
-        <i class="fa fa-calendar journey-icon"></i>
-        <span class="journey-date">2020</span>
-        <p class="journey-description">Started Software Division in Malad on Nov 14, 2016. By Jan 2017, developed software, handled hardware, and performed data entry for CIDCO.</p>
-      </div>
-      <div class="journey-item">
-        <i class="fa fa-calendar journey-icon"></i>
-        <span class="journey-date">2021</span>
-        <p class="journey-description">In Dec 2018, we secured 'Gram Panchayat Development and Planning' project integrated with a fellowship program under Mr. Devendra Fadnavis.</p>
-      </div>
-      <div class="journey-item">
-        <i class="fa fa-calendar journey-icon"></i>
-        <span class="journey-date">2022</span>
-        <p class="journey-description">Survived post-Covid with customer support. Developed 'Knowledge Resource Center' with SVT College. Created CM Apprenticeship Management System for GHRDC, Goa. Awarded HRMS projects.</p>
-      </div>
-      <div class="journey-item">
-        <i class="fa fa-calendar journey-icon"></i>
-        <span class="journey-date">2023</span>
-        <p class="journey-description">Established educational software for Government Law College, Mumbai, Audit Utility for CGST Thane, Citizen Scheme Portal for Navi Mumbai Municipal Corporation. Ventured into Labour Law Compliance.</p>
-      </div>
-      <div class="journey-item">
-        <i class="fa fa-calendar journey-icon"></i>
-        <span class="journey-date">2024</span>
-        <p class="journey-description">Continuing ..</p>
-      </div>
-    </div>
-  </div>
-</section> {% endcomment %}
-<section >
- 
+<section>
   <div class="row">
     <div class="col-lg-12">
         <head>
@@ -273,21 +220,9 @@
            
           </div>
         </div>
+  
         <div class="swiper-slide testimonial-items">
           <div class="testimonial-img tm-img-8">
-            <!-- <img src="assets/images/testimonial-profile-2.png" alt=""> -->
-          </div>
-          <p class="testimonial-text">Thanks to Be Better, I've unlocked my true potential and
-            transformed how others perceive me. Their tailored strategies
-            are a must for anyone looking to stand out!</p>
-          <p class="testimonial-title">Ms. Riya Patil</p>
-          <div class="review-stars">
-           
-
-          </div>
-        </div>
-        <div class="swiper-slide testimonial-items">
-          <div class="testimonial-img tm-img-9">
             <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
           </div>
           <p class="testimonial-text">Working with Be Better, was one of the best career decisions
@@ -296,11 +231,99 @@
             won't regret it!</p>
           <p class="testimonial-title">Mr. Pruthvi Hajare</p>
           <div class="review-stars">
-           
+          </div>
+        </div>
 
+        <div class="swiper-slide testimonial-items">
+          <div class="testimonial-img tm-img-9">
+            <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
+          </div>
+          <p class="testimonial-text">Working with Be Better, was one of the best career decisions
+            I've made. Their dedication resulted in a brand identity
+            that truly resonates with my audience. Invest in your personal brand with them – you
+            won't regret it!</p>
+          <p class="testimonial-title">Mr. Yash Gharat</p>
+          <div class="review-stars">
+          </div>
+        </div>
+
+        <div class="swiper-slide testimonial-items">
+          <div class="testimonial-img tm-img-10">
+            <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
+          </div>
+          <p class="testimonial-text">Working with Be Better, was one of the best career decisions
+            I've made. Their dedication resulted in a brand identity
+            that truly resonates with my audience. Invest in your personal brand with them – you
+            won't regret it!</p>
+          <p class="testimonial-title">Mr. Vishal Mhalim</p>
+          <div class="review-stars">
+          </div>
+        </div>
+
+        <div class="swiper-slide testimonial-items">
+          <div class="testimonial-img tm-img-11">
+            <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
+          </div>
+          <p class="testimonial-text">Working with Be Better, was one of the best career decisions
+            I've made. Their dedication resulted in a brand identity
+            that truly resonates with my audience. Invest in your personal brand with them – you
+            won't regret it!</p>
+          <p class="testimonial-title">Mr. Rishikesh Raorane</p>
+          <div class="review-stars">
           </div>
         </div>
         
+
+        <div class="swiper-slide testimonial-items">
+          <div class="testimonial-img tm-img-12">
+            <!-- <img src="assets/images/testimonial-profile-2.png" alt=""> -->
+          </div>
+          <p class="testimonial-text">Thanks to Be Better, I've unlocked my true potential and
+            transformed how others perceive me. Their tailored strategies
+            are a must for anyone looking to stand out!</p>
+          <p class="testimonial-title">Ms. Riya Patil</p>
+          <div class="review-stars">
+          </div>
+        </div>
+
+        <div class="swiper-slide testimonial-items">
+          <div class="testimonial-img tm-img-13">
+            <!-- <img src="assets/images/testimonial-profile-2.png" alt=""> -->
+          </div>
+          <p class="testimonial-text">Thanks to Be Better, I've unlocked my true potential and
+            transformed how others perceive me. Their tailored strategies
+            are a must for anyone looking to stand out!</p>
+          <p class="testimonial-title">Ms. Shreya Tawre</p>
+          <div class="review-stars">
+          </div>
+        </div>
+
+
+        <div class="swiper-slide testimonial-items">
+          <div class="testimonial-img tm-img-14">
+            <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
+          </div>
+          <p class="testimonial-text">Working with Be Better, was one of the best career decisions
+            I've made. Their dedication resulted in a brand identity
+            that truly resonates with my audience. Invest in your personal brand with them – you
+            won't regret it!</p>
+          <p class="testimonial-title">Ms. Palavee Chavan</p>
+          <div class="review-stars">
+          </div>
+        </div>
+
+        <div class="swiper-slide testimonial-items">
+          <div class="testimonial-img tm-img-15">
+            <!-- <img src="assets/images/testimonial-profile-3.png" alt=""> -->
+          </div>
+          <p class="testimonial-text">Working with Be Better, was one of the best career decisions
+            I've made. Their dedication resulted in a brand identity
+            that truly resonates with my audience. Invest in your personal brand with them – you
+            won't regret it!</p>
+          <p class="testimonial-title">Ms. Manasi Kamble</p>
+          <div class="review-stars">
+          </div>
+        </div> 
       </div>
       <!--     <div class="swiper-button-next"></div>
                         <div class="swiper-button-prev"></div> -->
@@ -308,223 +331,85 @@
     </div>
   </div>
 </section>
-   
-  <!-- Swiper JS -->
+  
+<section id="vision-mission-objective">
+  <h2>Our Vision, Mission & Objectives</h2>
+  <div class="content-container">
+    <br>
+    <!-- Vision Section -->
+    <div class="content-item vision">
+      <div class="icon-container">
+        <h3 class="about_us_title">Our Vision</h3> <!-- Added Heading Here -->
+        <img src="{% static 'vision.png' %}" alt="Vision Icon">
+        <br><br>
+        <p>To be a global leader in technology solutions, empowering businesses with innovative IT strategies for sustained growth.</p>
+      </div>
+    </div>
 
+    <!-- Mission Section -->
+    <div class="content-item mission">
+      <div class="icon-container">
+        <h3 class="about_us_title">Our Mission</h3> <!-- Added Heading Here -->
+        <img src="{% static 'mission.png' %}" alt="Mission Icon"><br><br>
+        <p>Our mission is to deliver cutting-edge, customer-centric IT solutions that drive business success, create value, and foster long-term relationships.</p>
+      </div>
+    </div>
 
-{% comment %} 
-  <style>
-    *, *::before, *::after {
-        box-sizing: border-box;
-      }
-      
-      body {
-        font-family: "Work Sans", sans-serif;
-        font-weight: 400;
-        height: 100vh;
-      }
-      
-      .wrapper {
-        background-color: #08BDBD;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-      }
-      
-      .carousel {
-        position: relative;
-        overflow: hidden;
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-      
-      .carousel__item {
-        width: 100%;
-        max-width: 300px;
-        padding: 0 12px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        position: absolute;
-        opacity: 0;
-        -webkit-animation: carousel-animate-horizontal 20s linear forwards infinite;
-                animation: carousel-animate-horizontal 20s linear forwards infinite;
-      }
-      @media screen and (min-width: 650px) {
-        .carousel__item {
-          max-width: 500px;
-        }
-      }
-      
-      .carousel__item:nth-child(1) {
-        -webkit-animation-delay: calc(3.3333333333s * 0);
-                animation-delay: calc(3.3333333333s * 0);
-      }
-      
-      .carousel__item:nth-child(2) {
-        -webkit-animation-delay: calc(3.3333333333s * 1);
-                animation-delay: calc(3.3333333333s * 1);
-      }
-      
-      .carousel__item:nth-child(3) {
-        -webkit-animation-delay: calc(3.3333333333s * 2);
-                animation-delay: calc(3.3333333333s * 2);
-      }
-      
-      .carousel__item:nth-child(4) {
-        -webkit-animation-delay: calc(3.3333333333s * 3);
-                animation-delay: calc(3.3333333333s * 3);
-      }
-      
-      .carousel__item:nth-child(5) {
-        -webkit-animation-delay: calc(3.3333333333s * 4);
-                animation-delay: calc(3.3333333333s * 4);
-      }
-      
-      .carousel__item:nth-child(6) {
-        -webkit-animation-delay: calc(3.3333333333s * 5);
-                animation-delay: calc(3.3333333333s * 5);
-      }
-      
-      .carousel__item-head {
-        border-radius: 50%;
-        background-color: #dcdee1;
-        width: 84px;
-        height: 84px;
-        margin-bottom: -42px;
-        position: relative;
-        flex-shrink: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 20px;
-      }
-      
-      .carousel__item-body {
-        width: 100%;
-        background-color: #fff;
-        border-radius: 8px;
-        padding: 50px 30px 20px 30px;
-        text-align: center;
-      }
-      
-      @-webkit-keyframes carousel-animate-horizontal {
-        0% {
-          transform: translateX(-200%);
-          opacity: 0;
-        }
-        2%, 16.6666666667% {
-          transform: translateX(-100%);
-          opacity: 0.4;
-        }
-        18.6666666667%, 33.3333333333% {
-          transform: translateX(0);
-          opacity: 1;
-        }
-        35.3333333333%, 50% {
-          transform: translateX(100%);
-          opacity: 0.4;
-        }
-        52% {
-          transform: translateX(200%);
-          opacity: 0;
-        }
-        100% {
-          transform: translateX(200%);
-          opacity: 0;
-        }
-      }
-      
-      @keyframes carousel-animate-horizontal {
-        0% {
-          transform: translateX(-200%);
-          opacity: 0;
-        }
-        2%, 16.6666666667% {
-          transform: translateX(-100%);
-          opacity: 0.4;
-        }
-        18.6666666667%, 33.3333333333% {
-          transform: translateX(0);
-          opacity: 1;
-        }
-        35.3333333333%, 50% {
-          transform: translateX(100%);
-          opacity: 0.4;
-        }
-        52% {
-          transform: translateX(200%);
-          opacity: 0;
-        }
-        100% {
-          transform: translateX(200%);
-          opacity: 0;
-        }
-      }
-</style>
-
-  <div class='wrapper'>
-    <div class='carousel'>
-      <div class='carousel__item'>
-        <div class='carousel__item-head'>
-          1
-        </div>
-        <div class='carousel__item-body'>
-          <p>Carousel item 1</p>
-          <p>Eiusmod tempor incididunt ut labore et dolore</p>
-        </div>
-      </div>
-      <div class='carousel__item'>
-        <div class='carousel__item-head'>
-          2
-        </div>
-        <div class='carousel__item-body'>
-          <p>Carousel item 2</p>
-          <p>Eiusmod tempor incididunt ut labore et dolore</p>
-        </div>
-      </div>
-      <div class='carousel__item'>
-        <div class='carousel__item-head'>
-          3
-        </div>
-        <div class='carousel__item-body'>
-          <p>Carousel item 3</p>
-          <p>Eiusmod tempor incididunt ut labore et dolore</p>
-        </div>
-      </div>
-      <div class='carousel__item'>
-        <div class='carousel__item-head'>
-          4
-        </div>
-        <div class='carousel__item-body'>
-          <p>Carousel item 4</p>
-          <p>Eiusmod tempor incididunt ut labore et dolore</p>
-        </div>
-      </div>
-      <div class='carousel__item'>
-        <div class='carousel__item-head'>
-          5
-        </div>
-        <div class='carousel__item-body'>
-          <p>Carousel item 5</p>
-          <p>Eiusmod tempor incididunt ut labore et dolore</p>
-        </div>
-      </div>
-      <div class='carousel__item'>
-        <div class='carousel__item-head'>
-          6
-        </div>
-        <div class='carousel__item-body'>
-          <p>Carousel item 6</p>
-          <p>Eiusmod tempor incididunt ut labore et dolore</p>
-        </div>
+    <!-- Objectives Section -->
+    <div class="content-item objectives">
+      <div class="icon-container">
+        <h3 class="about_us_title">Our Objectives</h3> <!-- Added Heading Here -->
+        <img src="{% static 'objective.png' %}" alt="Objectives Icon"><br><br>
+        <ul>
+          <li>Provide reliable and secure tech solutions that meet client needs.</li>
+          <li>Continuously innovate to stay ahead in the fast-evolving tech industry.</li>
+          <li>Build strong partnerships and offer top-notch customer support.</li>
+          <li>Foster a collaborative, inclusive work culture for personal and professional growth.</li>
+        </ul>
       </div>
     </div>
   </div>
-   {% endcomment %}
+</section>
+
+<section id="careers">
+  <h2>Careers at Our Company</h2>
+  <ul>
+      <li>
+          <span>Position 1: Software Developer</span>
+          <img src="{% static 'apply.png' %}" alt="Apply" class="apply-btn" data-position="Software Developer">
+      </li>
+      <li>
+          <span>Position 2: Marketing Manager</span>
+          <img src="{% static 'apply.png' %}" alt="Apply" class="apply-btn" data-position="Marketing Manager">
+      </li>
+      <li>
+          <span>Position 3: Data Analyst</span>
+          <img src="{% static 'apply.png' %}" alt="Apply" class="apply-btn" data-position="Data Analyst">
+      </li>
+      <!-- Add more positions as needed -->
+  </ul>
+</section>
+
+<!-- Popup Form -->
+<div id="apply-popup" class="popup">
+  <div class="popup-content">
+      <span id="close-popup" class="close-btn">&times;</span>
+      <h3>Apply for <span id="position-name"></span></h3>
+      <form id="apply-form">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required><br><br>
+          
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required><br><br>
+          
+          <label for="resume">Upload Resume:</label>
+          <input type="file" id="resume" name="resume" required><br><br>
+          
+          <button type="submit">Submit Application</button>
+      </form>
+  </div>
+</div>
+
     
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -581,5 +466,43 @@
     });
 </script>
 
+<script>
+// Get the apply buttons and the popup elements
+const applyButtons = document.querySelectorAll('.apply-btn');
+const popup = document.getElementById('apply-popup');
+const closePopup = document.getElementById('close-popup');
+const positionName = document.getElementById('position-name');
+const form = document.getElementById('apply-form');
+
+// Open the popup and set the position name
+applyButtons.forEach(button => {
+    button.addEventListener('click', function() {
+        const position = this.getAttribute('data-position');
+        positionName.textContent = position; // Set the position name in the popup
+        popup.style.display = 'block'; // Show the popup
+    });
+});
+
+// Close the popup when the close button is clicked
+closePopup.addEventListener('click', function() {
+    popup.style.display = 'none';
+});
+
+// Close the popup if the user clicks outside the popup content
+window.addEventListener('click', function(event) {
+    if (event.target === popup) {
+        popup.style.display = 'none';
+    }
+});
+
+// Handle form submission (for now, we'll just log the data to the console)
+form.addEventListener('submit', function(event) {
+    event.preventDefault(); // Prevent the form from submitting normally
+    const formData = new FormData(form);
+    console.log("Form Submitted:", formData);
+    popup.style.display = 'none'; // Close the popup after submission
+});
+
+</script>
 
 </html>
